@@ -19,9 +19,9 @@ package com.tencent.cloud.polaris.gateway.example.callee;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 
 import com.tencent.cloud.common.constant.MetadataConstant;
+import org.owasp.esapi.ESAPI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -29,6 +29,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import static com.tencent.cloud.common.constant.ContextConstant.UTF_8;
 
 /**
  * Gateway callee controller.
@@ -65,8 +67,13 @@ public class GatewayCalleeController {
 	public String echoHeader(
 			@RequestHeader(MetadataConstant.HeaderName.CUSTOM_METADATA) String metadataStr)
 			throws UnsupportedEncodingException {
-		LOG.info(URLDecoder.decode(metadataStr, StandardCharsets.UTF_8.name()));
-		return URLDecoder.decode(metadataStr, StandardCharsets.UTF_8.name());
+		LOG.info(URLDecoder.decode(metadataStr, UTF_8));
+		metadataStr = URLDecoder.decode(metadataStr, UTF_8);
+		return cleanXSS(metadataStr);
 	}
 
+	private String cleanXSS(String str) {
+		str = ESAPI.encoder().encodeForHTML(str);
+		return str;
+	}
 }
